@@ -4,6 +4,5 @@
 #Please list the dependencies name with version if they are different from the ones 
 #listed in the global libraries.properties file (in alphabetical order)
 
-jackson.version=1.0.1
 commons-configuration.version=1.6
 commons-math.version=2.1
